# cppmathutils

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cppmathutils.cpp  cppmathutils.h  vcpkg.json
include/iocsv/: csv_writer.hpp
include/linalg/: cholesky.hpp  qr.hpp  tensordot.hpp
include/ml/GaussianProcessRegression/: README.md  ard_kernel.hpp  composite_kernel.hpp  gp_regression.hpp  kernel_base.hpp  rbf_kernel.hpp  white_noise_kernel.hpp
include/ml/LinearRegression/: README.md  linear_regression.hpp
include/ml/MultipleLinearRegression/: README.md  multiple_linear_regression.hpp
include/ml/RidgeRegression/: README.md  ridge_regression.hpp
include/ml/SimpleLinearRegression/: README.md  simple_linear_regression.hpp
include/optimize/: gradient_descent.hpp  optimizer_base.hpp
include/optimize/AdaptiveMetropolis/: README.md  adaptive_metropolis.hpp
include/optimize/GradientDescent/: README.md  gradient_descent.hpp
include/optimize/SimulatedAnnealing/: README.md  simulated_annealing.hpp
include/stats/: distance.hpp
src/: main.cpp
tests/linalg/: CMakeLists.txt  cholesky_test.cpp  tensordot_test.cpp
tests/ml/: CMakeLists.txt  gp_regression_test.cpp  multiple_linear_regression.cpp
tests/ml/GaussianProcessRegression/: CMakeLists.txt  gp_regression_test.cpp
tests/ml/GaussianProcessRegression/SimpleLinearRegression/: simple_linear_regression_test.cpp
tests/ml/LinearRegression/: CMakeLists.txt  linear_regression_test.cpp
tests/ml/MultipleLinearRegression/: CMakeLists.txt
tests/ml/RidgeRegression/: CMakeLists.txt  ridge_regression_test.cpp
tests/ml/SimpleLinearRegression/: CMakeLists.txt
tests/optimize/: CMakeLists.txt
tests/optimize/AdaptiveMetropolis/: CMakeLists.txt  adaptive_metropolis_test.cpp
tests/optimize/SimulatedAnnealing/: CMakeLists.txt  simulated_annealing_test.cpp
